# audio-ident

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  docker-compose.yml  mypy.ini
audio-ident-service/: .env.example  .gitignore  CLAUDE.md  Makefile  alembic.ini  pyproject.toml
audio-ident-service/alembic/: env.py
audio-ident-service/alembic/versions/: 43aa2e7ecfe9_add_tracks_table.py  b96f382d0813_change_file_size_bytes_to_bigint.py
audio-ident-service/app/: main.py  settings.py
audio-ident-service/app/audio/: decode.py  dedup.py  embedding.py  fingerprint.py  metadata.py  qdrant_setup.py  storage.py
audio-ident-service/app/auth/: admin.py  jwt.py  oauth2.py  password.py
audio-ident-service/app/db/: engine.py  session.py
audio-ident-service/app/ingest/: __main__.py  cli.py  pipeline.py
audio-ident-service/app/models/: __init__.py  track.py
audio-ident-service/app/routers/: health.py  ingest.py  search.py  tracks.py  version.py
audio-ident-service/app/schemas/: errors.py  ingest.py  pagination.py  search.py  track.py  version.py
audio-ident-service/docs/: api-contract.md
audio-ident-service/scripts/: __init__.py  build_eval_corpus.py  eval_exact.py  eval_latency.py  eval_report.py  eval_vibe.py
audio-ident-service/tests/: test_audio_decode.py  test_audio_dedup.py  test_audio_embedding.py  test_audio_fingerprint.py  test_audio_metadata.py  test_audio_qdrant_setup.py  test_audio_storage.py  test_health.py  test_ingest_pipeline.py  test_ingest_router.py  test_pagination_schema.py  test_search_exact.py  test_search_integration.py  test_search_vibe.py  test_tracks.py  test_tracks_audio.py
audio-ident-ui/: .env.example  (+10 more)
(+70 files in other folders)
